--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <a class="link-btn" target="_blank"href="https://www.linkedin.com/company/programminghero/">HIRE ME</a>
     </div>
     <div class="half-width">
-        <img src="images/jhankar.png" alt="">
+        <img src="images/newproject.png" alt="">
     </div>
 </section> 
 <section class="dream">
     <div class="half-width">
-        <img src="images/jhankar2.png" alt="">
+        <img src="images/mima.png" alt="">
     </div>
     <div class="half-width">
         <h2>Big Dream</h2>
